--- a/FlySafe.csproj
+++ b/FlySafe.csproj
@@ -31,6 +31,10 @@
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
 		</Content>
+		<Content Include="Version.txt">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+		</Content>	
 		<!-- Можно добавить дополнительные файлы сюда, используя тот же шаблон -->
 	</ItemGroup>
 
