SimConnect added, ECAM connection status messages added. Messages.json file included.

--- a/FlySafe.csproj
+++ b/FlySafe.csproj
@@ -9,9 +9,16 @@
     <ApplicationIcon>Images\app_icon.ico</ApplicationIcon>
   </PropertyGroup>
 
+
   <ItemGroup>
     <PackageReference Include="SkiaSharp.Svg" Version="1.60.0" />
   </ItemGroup>
+
+	<ItemGroup>
+		<None Update="libs\SimConnect.dll">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 
 	<ItemGroup>
 		<!-- Файл будет копироваться как в выходную директорию сборки, так и в директорию публикации -->
@@ -31,6 +38,7 @@
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
 		</Content>
+		<Content Include="SimConnect.dll" />
 		<Content Include="Version.txt">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
