SimConnect added to Publish.

--- a/FlySafe.csproj
+++ b/FlySafe.csproj
@@ -14,11 +14,6 @@
     <PackageReference Include="SkiaSharp.Svg" Version="1.60.0" />
   </ItemGroup>
 
-	<ItemGroup>
-		<None Update="libs\SimConnect.dll">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-	</ItemGroup>
 
 	<ItemGroup>
 		<!-- Файл будет копироваться как в выходную директорию сборки, так и в директорию публикации -->
@@ -38,7 +33,9 @@
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
 		</Content>
-		<Content Include="SimConnect.dll" />
+		<Content Include="SimConnect.dll">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
 		<Content Include="Version.txt">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
