--- a/FlySafe.csproj
+++ b/FlySafe.csproj
@@ -11,6 +11,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="SkiaSharp.Svg" Version="1.60.0" />
   </ItemGroup>
 
