ECAM background with rounded corners added.

--- a/FlySafe.csproj
+++ b/FlySafe.csproj
@@ -52,6 +52,9 @@
 	  <Resource Include="Images\Back.png">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Resource>
+	  <Resource Include="Images\ECAM.png">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Resource>
 	</ItemGroup>
 
   <ItemGroup>
