--- a/FlySafe.csproj
+++ b/FlySafe.csproj
@@ -9,6 +9,10 @@
     <ApplicationIcon>Images\app_icon.ico</ApplicationIcon>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Images\Button.png" />
+  </ItemGroup>
+
 	
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
@@ -50,6 +54,9 @@
 
 	<ItemGroup>
 	  <Resource Include="Images\Back.png">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Resource>
+	  <Resource Include="Images\Button.png">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Resource>
 	  <Resource Include="Images\ECAM.png">
