--- a/FlySafe.csproj
+++ b/FlySafe.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\Arrows.png" />
     <None Remove="Images\Button.png" />
   </ItemGroup>
 
@@ -53,6 +54,9 @@
 
 
 	<ItemGroup>
+	  <Resource Include="Images\Arrows.png">
+	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+	  </Resource>
 	  <Resource Include="Images\Back.png">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Resource>
